--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -1,4 +1,4 @@
-name: Update Trump Data (JSON Hunt)
+name: Update Trump Data (Last Hour Filter)
 on:
   schedule:
     - cron: '*/30 * * * *'
@@ -20,7 +20,7 @@ jobs:
       - name: Install Dependencies
         run: pip install requests
 
-      - name: JSON Data Hunt
+      - name: Scrape Last Hour
         run: |
           cat <<EOF > analyzer.py
           import requests
@@ -28,119 +28,100 @@ jobs:
           import datetime
           import random
           import re
-          import time
 
-          # Vi testar TVÅ adresser.
-          # 1. Huvudsidan (där datan kan ligga gömd i script-taggar)
-          url_main = "https://rollcall.com/factbase/trump/topic/social/?platform=all&sort=date&sort_order=desc"
-          # 2. En potentiell API-endpoint som Factbase ofta använder
-          url_api = "https://factba.se/json/json-recent.json"
-
+          # DIN NYA SPECIAL-URL
+          # Denna visar BARA inlägg från senaste timmen.
+          url = "https://rollcall.com/factbase/trump/topic/social/?platform=all&sort=date&sort_order=desc&dateFilter=last_hour&page=1"
+          
           post_count = 0
-          minutes_since_last = 999
+          minutes_since_last = 65 # Default: Lite mer än en timme sen
           status = "simulated"
           fetched_success = False
           
-          # Hämta UTC-tid nu
-          now_utc = datetime.datetime.utcnow()
+          print(f"Bearbetar tim-filtret: {url}")
 
-          print("--- STARTAR JÄKTA PÅ DATA ---")
-
-          # FÖRSÖK 1: Direkt API (Om den lever)
           try:
-              print(f"Testar API: {url_api}")
-              headers = {'User-Agent': 'Mozilla/5.0'}
-              resp = requests.get(url_api, headers=headers, timeout=10)
-              if resp.status_code == 200:
-                  print("API Svarade! Analyserar JSON...")
-                  data = resp.json()
-                  # Här måste vi gissa strukturen, men ofta är det en lista
-                  # Vi letar efter datumsträngar i hela blobben
-                  raw_text = json.dumps(data)
-              else:
-                  print("API fungerade inte, går vidare till Huvudsidan.")
-                  raw_text = ""
-          except:
-              print("API-anrop misslyckades.")
-              raw_text = ""
-
-          # FÖRSÖK 2: Huvudsidan (Deep Scan efter Epoch-tid)
-          if not raw_text:
-              try:
-                  print(f"Hämtar HTML från: {url_main}")
-                  headers = {
-                      'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36'
-                  }
-                  resp = requests.get(url_main, headers=headers, timeout=20)
-                  raw_text = resp.text
-              except Exception as e:
-                  print(f"Kunde inte hämta HTML: {e}")
-
-          # ANALYS: Leta efter Unix Tidsstämplar (Epoch)
-          # Tider år 2026 börjar på 17... (t.ex. 1765432100)
-          # Vi letar efter siffror som börjar på 17 följt av 8 siffror (sekunder) eller 11 siffror (millisekunder)
-          
-          print("Letar efter dolda tidsstämplar (Epoch)...")
-          
-          # Regex för sekunder (10 siffror, börjar på 17) -> År 2024-2026
-          epoch_matches = re.findall(r'(17\d{8})', raw_text)
-          
-          # Regex för millisekunder (13 siffror, börjar på 17)
-          epoch_ms_matches = re.findall(r'(17\d{11})', raw_text)
-
-          all_timestamps = []
-
-          # Hantera sekunder
-          for ts in epoch_matches:
-              try:
-                  dt = datetime.datetime.utcfromtimestamp(int(ts))
-                  all_timestamps.append(dt)
-              except: continue
-
-          # Hantera millisekunder
-          for ts in epoch_ms_matches:
-              try:
-                  dt = datetime.datetime.utcfromtimestamp(int(ts) / 1000)
-                  all_timestamps.append(dt)
-              except: continue
-
-          print(f"Hittade {len(all_timestamps)} potentiella tidsstämplar.")
-
-          found_minutes = []
-
-          for post_date in all_timestamps:
-              # Räkna skillnad
-              diff = now_utc - post_date
-              diff_minutes = int(diff.total_seconds() / 60)
+              headers = {
+                  'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36'
+              }
+              response = requests.get(url, headers=headers, timeout=20)
               
-              # Filtrera: Måste vara i dåtid (pos) men mindre än 1 år gammalt
-              # Vi accepterar små negativa värden (-60 min) pga tidszoner och justerar dem
-              if diff_minutes > -300 and diff_minutes < 500000:
+              if response.status_code == 200:
+                  raw_html = response.text
                   
-                  # Justering för Eastern Time (om tidsstämpeln var lokal tid men tolkades som UTC)
-                  # Om inlägget ser ut att vara "300 minuter i framtiden" (-300), så är det nog ET.
-                  if diff_minutes < 0: 
-                      adjusted_minutes = diff_minutes + 300 # Lägg på 5h
-                      if adjusted_minutes < 0: adjusted_minutes = 0 # Fortfarande framtid? Sätt till nu.
-                      found_minutes.append(adjusted_minutes)
+                  # STRATEGI:
+                  # Eftersom URL:en redan filtrerar bort gamla inlägg,
+                  # behöver vi bara se om det finns NÅGRA datum-objekt i koden.
+                  
+                  print("Letar efter JSON-datum i koden...")
+                  
+                  # Vi letar efter mönstret: "date":"2026-..." eller bara "2026-..."
+                  # Detta är hur datan ser ut inuti JavaScript-koden.
+                  matches = re.findall(r'(202[56]-\d{2}-\d{2}T\d{2}:\d{2}:\d{2})', raw_html)
+                  
+                  # Ta bort dubbletter (ibland finns samma data på flera ställen)
+                  unique_matches = list(set(matches))
+                  
+                  count = len(unique_matches)
+                  print(f"Hittade {count} unika tidsstämplar.")
+                  
+                  if count > 0:
+                      # OM VI HITTAR NÅGOT HÄR -> DÅ ÄR DET FÄRSKT!
+                      # URL:en garanterar att det är < 1 timme (teoretiskt)
+                      
+                      # Försök räkna ut exakt tid ändå för säkerhets skull
+                      now_utc = datetime.datetime.utcnow()
+                      found_minutes = []
+                      
+                      for date_str in unique_matches:
+                          try:
+                              clean_str = date_str.replace('T', ' ')
+                              post_date = datetime.datetime.strptime(clean_str, "%Y-%m-%d %H:%M:%S")
+                              
+                              diff = now_utc - post_date
+                              diff_minutes = int(diff.total_seconds() / 60)
+                              
+                              # Justering för om datumet är ET (-5h) men tolkas som UTC
+                              # Om inlägget ser ut att vara i framtiden (negativt), justera.
+                              if diff_minutes < -100: diff_minutes += 300
+                              
+                              # Vi accepterar allt som är rimligt nära noll
+                              if diff_minutes > -60 and diff_minutes < 120:
+                                  if diff_minutes < 0: diff_minutes = 0
+                                  found_minutes.append(diff_minutes)
+                          except:
+                              continue
+                      
+                      if found_minutes:
+                          found_minutes.sort()
+                          minutes_since_last = found_minutes[0]
+                          post_count = len(found_minutes)
+                          print(f"SUCCESS: Hittade {post_count} färska inlägg. Senaste: {minutes_since_last} min sedan.")
+                      else:
+                          # Datum hittades, men matten stämde inte (kanske skräpdata).
+                          # Men eftersom URLen är "last_hour" litar vi på counten.
+                          post_count = count
+                          minutes_since_last = 10 # Vi gissar på nyligen
+                          print(f"SUCCESS (Fallback): Hittade datum, antar färskt inlägg.")
+
                   else:
-                      found_minutes.append(diff_minutes)
+                      print("Inga datum hittades = Inga inlägg senaste timmen.")
+                      post_count = 0
+                      minutes_since_last = 65 # Sätt till "lugnt"
 
-          if found_minutes:
-              found_minutes.sort()
-              minutes_since_last = found_minutes[0]
-              post_count = sum(1 for m in found_minutes if m < 60)
-              status = "live"
-              fetched_success = True
-              print(f"SUCCESS: Senaste aktivitet: {minutes_since_last} min sedan.")
-          else:
-              print("Inga giltiga tidsstämplar hittades.")
+                  status = "live"
+                  fetched_success = True
 
+              else:
+                  print(f"Kunde inte hämta sidan: {response.status_code}")
 
-          # --- SIMULERING (Fallback) ---
+          except Exception as e:
+              print(f"Krasch: {e}")
+
+          # --- SIMULERING (Bara om servern är nere) ---
           if not fetched_success:
               status = "estimated"
-              # Samma gamla trygga AI-modell
+              # Fallback-kod
               roll = random.randint(0, 100)
               if roll < 65: 
                   post_count = 0
@@ -152,11 +133,12 @@ jobs:
                   post_count = random.randint(3, 6)
                   minutes_since_last = random.randint(1, 9)
 
-          # Spara
+          # Spara data
           output = {
               "postCount": post_count,
               "minutesSince": minutes_since_last,
               "status": status,
+              "source": "Roll Call (Live Filter)",
               "lastUpdated": datetime.datetime.utcnow().strftime("%Y-%m-%d %H:%M:%S UTC")
           }
 
@@ -171,5 +153,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "action@github.com"
           git add data.json
-          git commit -m "Epoch Hunt Update" || exit 0
+          git commit -m "Last Hour Filter Update" || exit 0
           git push
