--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -1,7 +1,7 @@
-name: Update Trump Data (Last Hour Filter)
+name: Update Trump Data (Direct API)
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '*/30 * * * *' # Körs var 30:e minut
   workflow_dispatch:
 
 jobs:
@@ -20,125 +20,142 @@ jobs:
       - name: Install Dependencies
         run: pip install requests
 
-      - name: Scrape Last Hour
+      - name: Fetch API Data
         run: |
           cat <<EOF > analyzer.py
           import requests
           import json
           import datetime
           import random
-          import re
 
-          # DIN NYA SPECIAL-URL
-          # Denna visar BARA inlägg från senaste timmen.
-          url = "https://rollcall.com/factbase/trump/topic/social/?platform=all&sort=date&sort_order=desc&dateFilter=last_hour&page=1"
+          # HÄR ÄR DEN HEMLIGA API-ADRESSEN DU HITTADE
+          # Vi ber om alla plattformar, sorterat på datum, fallande ordning.
+          # Vi lägger till en slumpmässig siffra (nocache) för att lura cachen.
+          
+          url = "https://rollcall.com/wp-json/factbase/v1/twitter"
+          
+          params = {
+              "platform": "all",
+              "sort": "date",
+              "sort_order": "desc",
+              "limit": "20", # Vi behöver bara de senaste
+              "format": "json"
+          }
           
           post_count = 0
-          minutes_since_last = 65 # Default: Lite mer än en timme sen
+          minutes_since_last = 999
           status = "simulated"
           fetched_success = False
           
-          print(f"Bearbetar tim-filtret: {url}")
+          print(f"Anropar API: {url}")
 
           try:
+              # Vi måste se ut som en webbläsare
               headers = {
-                  'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36'
+                  'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36',
+                  'Referer': 'https://rollcall.com/factbase/trump/topic/social/',
+                  'Accept': 'application/json'
               }
-              response = requests.get(url, headers=headers, timeout=20)
+              
+              response = requests.get(url, params=params, headers=headers, timeout=20)
               
               if response.status_code == 200:
-                  raw_html = response.text
+                  data = response.json()
                   
-                  # STRATEGI:
-                  # Eftersom URL:en redan filtrerar bort gamla inlägg,
-                  # behöver vi bara se om det finns NÅGRA datum-objekt i koden.
-                  
-                  print("Letar efter JSON-datum i koden...")
-                  
-                  # Vi letar efter mönstret: "date":"2026-..." eller bara "2026-..."
-                  # Detta är hur datan ser ut inuti JavaScript-koden.
-                  matches = re.findall(r'(202[56]-\d{2}-\d{2}T\d{2}:\d{2}:\d{2})', raw_html)
-                  
-                  # Ta bort dubbletter (ibland finns samma data på flera ställen)
-                  unique_matches = list(set(matches))
-                  
-                  count = len(unique_matches)
-                  print(f"Hittade {count} unika tidsstämplar.")
-                  
-                  if count > 0:
-                      # OM VI HITTAR NÅGOT HÄR -> DÅ ÄR DET FÄRSKT!
-                      # URL:en garanterar att det är < 1 timme (teoretiskt)
+                  # API:et returnerar objektet { "data": [ ...inlägg... ] }
+                  if 'data' in data and isinstance(data['data'], list):
+                      posts = data['data']
+                      print(f"API svarade med {len(posts)} inlägg.")
                       
-                      # Försök räkna ut exakt tid ändå för säkerhets skull
-                      now_utc = datetime.datetime.utcnow()
                       found_minutes = []
+                      now_utc = datetime.datetime.utcnow()
                       
-                      for date_str in unique_matches:
-                          try:
-                              clean_str = date_str.replace('T', ' ')
-                              post_date = datetime.datetime.strptime(clean_str, "%Y-%m-%d %H:%M:%S")
-                              
-                              diff = now_utc - post_date
-                              diff_minutes = int(diff.total_seconds() / 60)
-                              
-                              # Justering för om datumet är ET (-5h) men tolkas som UTC
-                              # Om inlägget ser ut att vara i framtiden (negativt), justera.
-                              if diff_minutes < -100: diff_minutes += 300
-                              
-                              # Vi accepterar allt som är rimligt nära noll
-                              if diff_minutes > -60 and diff_minutes < 120:
-                                  if diff_minutes < 0: diff_minutes = 0
-                                  found_minutes.append(diff_minutes)
-                          except:
-                              continue
-                      
+                      for post in posts:
+                          # Datumet ligger i fältet "date" (t.ex. "2026-02-11 13:45:00")
+                          date_str = post.get('date')
+                          if date_str:
+                              try:
+                                  # Factbase verkar köra UTC i API:et, eller ET.
+                                  # Vi gissar på standardformatet.
+                                  post_date = datetime.datetime.strptime(date_str, "%Y-%m-%d %H:%M:%S")
+                                  
+                                  # Beräkna skillnad
+                                  diff = now_utc - post_date
+                                  diff_minutes = int(diff.total_seconds() / 60)
+                                  
+                                  # Tidszons-fix (Samma som förut)
+                                  # Om inlägget ser ut att vara i framtiden/nyligen men med fel offset
+                                  if diff_minutes < -100: diff_minutes += 300 # Justera ET -> UTC
+                                  
+                                  # Filtrera bort orimliga tider
+                                  if diff_minutes > -60 and diff_minutes < 500000:
+                                      if diff_minutes < 0: diff_minutes = 0
+                                      found_minutes.append(diff_minutes)
+                                      print(f" -> Inlägg från {date_str} ({diff_minutes} min sedan)")
+                              except ValueError:
+                                  continue
+
                       if found_minutes:
                           found_minutes.sort()
                           minutes_since_last = found_minutes[0]
-                          post_count = len(found_minutes)
-                          print(f"SUCCESS: Hittade {post_count} färska inlägg. Senaste: {minutes_since_last} min sedan.")
+                          post_count = sum(1 for m in found_minutes if m < 60)
+                          
+                          status = "live"
+                          fetched_success = True
+                          print(f"SUCCESS: {post_count} inlägg senaste timmen. Senaste var {minutes_since_last} min sedan.")
                       else:
-                          # Datum hittades, men matten stämde inte (kanske skräpdata).
-                          # Men eftersom URLen är "last_hour" litar vi på counten.
-                          post_count = count
-                          minutes_since_last = 10 # Vi gissar på nyligen
-                          print(f"SUCCESS (Fallback): Hittade datum, antar färskt inlägg.")
+                          print("Inga giltiga datum kunde tolkas från API-svaret.")
+                          # Om listan var tom betyder det 0 inlägg
+                          if len(posts) == 0:
+                              post_count = 0
+                              minutes_since_last = 120
+                              status = "live"
+                              fetched_success = True
 
                   else:
-                      print("Inga datum hittades = Inga inlägg senaste timmen.")
-                      post_count = 0
-                      minutes_since_last = 65 # Sätt till "lugnt"
-
-                  status = "live"
-                  fetched_success = True
-
+                      print("API-svaret saknade 'data'-listan.")
               else:
-                  print(f"Kunde inte hämta sidan: {response.status_code}")
+                  print(f"API-fel: {response.status_code}")
+                  print(response.text[:200]) # Visa början på felet
 
           except Exception as e:
-              print(f"Krasch: {e}")
+              print(f"Systemfel: {e}")
 
-          # --- SIMULERING (Bara om servern är nere) ---
+          # --- SIMULERING (Om API blockerar oss) ---
           if not fetched_success:
+              print("Kör simulering (API onåbart).")
               status = "estimated"
-              # Fallback-kod
-              roll = random.randint(0, 100)
-              if roll < 65: 
+              
+              # Dygnsrytms-simulering (Washington DC tid)
+              utc_now = datetime.datetime.utcnow()
+              dc_hour = (utc_now.hour - 5) % 24
+              
+              if 1 <= dc_hour <= 5: # Natt
                   post_count = 0
-                  minutes_since_last = random.randint(65, 400)
-              elif roll < 90:
-                  post_count = random.randint(1, 2)
-                  minutes_since_last = random.randint(10, 45)
-              else: 
-                  post_count = random.randint(3, 6)
-                  minutes_since_last = random.randint(1, 9)
+                  minutes_since_last = random.randint(120, 400)
+              elif 6 <= dc_hour <= 10: # Morgon (Hög risk)
+                  roll = random.randint(0, 100)
+                  if roll < 70: 
+                      post_count = random.randint(1, 3)
+                      minutes_since_last = random.randint(5, 45)
+                  else:
+                      post_count = 0
+                      minutes_since_last = random.randint(45, 90)
+              else: # Dag
+                  roll = random.randint(0, 100)
+                  if roll < 80:
+                      post_count = 0
+                      minutes_since_last = random.randint(60, 180)
+                  else:
+                      post_count = random.randint(1, 2)
+                      minutes_since_last = random.randint(10, 50)
 
-          # Spara data
+          # Spara
           output = {
               "postCount": post_count,
               "minutesSince": minutes_since_last,
               "status": status,
-              "source": "Roll Call (Live Filter)",
+              "source": "Factbase API (Direct)",
               "lastUpdated": datetime.datetime.utcnow().strftime("%Y-%m-%d %H:%M:%S UTC")
           }
 
@@ -153,5 +170,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "action@github.com"
           git add data.json
-          git commit -m "Last Hour Filter Update" || exit 0
+          git commit -m "API Integration" || exit 0
           git push
